--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 </head>
 
 <body>
+  <div class="w3-container">
     <h1 id="class-policies">CLASS POLICIES</h1>
     <h2 id="basic-calculus-and-modeling">BASIC CALCULUS AND MODELING</h2>
     <p>MATH 1830
@@ -98,7 +99,7 @@
 
         <li>Your classmates! Form a study group. Collaborate on Wiggio in D2L. Communicate via a text group on Remind. Research has shown working with others will enhance your retention and understanding of the material.</li>
     </ol>
-
+</div>
 </body>
 
 </html>
